NativePromise can't take callbacks defined with `auto` https://bugs.webkit.org/show_bug.cgi?id=262678 rdar://116505009

Reviewed by Youenn Fablet.

Use more modern C++ (C++17) to compute the arguments and prototype of the
lambdas passed to whenSettle/then.
This allows to use the simpler `auto` declaration.

Thanks to Gerald Squelart for providing the technical solution.

Fly-by fixes: rename the remaining ResolveReject reference to Settled

Added API tests to check that compilation works as expected.

* Source/WTF/wtf/NativePromise.h:
* Tools/TestWebKitAPI/Tests/WTF/NativePromise.cpp:
(TestWebKitAPI::TEST):

Canonical link: https://commits.webkit.org/268913@main